--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "optionalDependencies": {
+    "fsevents": "*"
   }
 }
